--- a/yaapp/templates/yabase/app/radio/wallInput.mustache
+++ b/yaapp/templates/yabase/app/radio/wallInput.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <form class="form-search">
     <textarea type="textarea" class="input-xxlarge search-query" row='5' maxlength='120'></textarea>
-    <button type="submit" class="btn submit-btn yabutton-large" id='submit'>{% trans "Post message" %}</button>
+    <button type="submit" class="btn submit-btn yabutton-large wall-btn-responsive" id='submit'>{% trans "Post message" %}</button>
     <!-- <button class="btn" id='refresh'>{% trans "Refresh" %}</button> -->
 </form>
