fixed image upload when creating radio with full ajax method

--- a/yaapp/templates/yabase/app/newRadio/newRadioPage.mustache
+++ b/yaapp/templates/yabase/app/newRadio/newRadioPage.mustache
@@ -36,7 +36,7 @@
                 </div>
                 <div class='upload-content yabutton-small'>
                     <span>{% trans "Choose a picture" %}</span>
-                    <input type='file' name='picture'/>
+                    <input type='file' name='picture' id='upload-photo'/>
                 </div>
             </div>
             <input class='radio-creation-submit yabutton-large' type='submit' value='{% trans "Create the radio" %}' />
