--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1446,14 +1446,14 @@ input::-webkit-input-placeholder {
     border: 2px solid white;
     background-color:#4e4f52;
     border-radius: 10px 10px 0px 0px;
-    opacity:0.9;
-    filter:alpha(opacity=90);
+    opacity:0.65;
+    filter:alpha(opacity=65);
 }
 
 #scroll-top-container img {
     margin:12px;
-    opacity:0.9;
-    filter:alpha(opacity=9);
+    opacity:0.70;
+    filter:alpha(opacity=70);
 }
 
 .hidden-scroll {
@@ -2063,7 +2063,7 @@ ul#notifications {
     width:213px;
     border:1px solid #b6b6b7;
     border-radius:10px;
-    box-shadow: 0px 0px 4px #b6b6b7;
+    box-shadow: 0px 0px 4px #cfcfcf;
     background-color:#f7f7f7;
     margin-left:3px;
     margin-top:30px;
@@ -3852,6 +3852,7 @@ a.yabutton-small {
 
     .wall-container {
         width: 100%;
+        max-width: 800px;
     }
 
     .wall-btn-responsive {
@@ -3976,21 +3977,24 @@ a.yabutton-small {
     }
 
 /*-- WALL --*/
-    .max-width-span4 {
-        display:none;
-    }
 
     .input-xxlarge {
-        width:85%;
+        width:80%;
     }
 
     .wall-container {
         width: 100%;
+        max-width:400px;
     }
 
     .wall-btn-responsive {
         margin-right:5%;
     }
+
+    .span4 {
+        width:300px;
+    }
+
 /*-- FOOTER --*/
 
     #connected-users,
