--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='wall-event-message'>
-	<img src='/media/images/like.png' width='32px' height='32px'/>
+	<img class='wall-img-like' src='/media/images/like.png' width='32px' height='32px'/>
 	<p><% text %></p>
-	<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
-	<div class='date-like'><% formatted_start_date %></div>
+	<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> <span>{% trans "likes" %} <% song_name %></span></h2>
+	<div class='date'><% formatted_start_date %></div>
 </div>
