--- a/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='wall-event-message alert-info'>
-    <img src='/media/images/default_album.png' width='32px' height='32px'/>
+    <img class='wall-img-song' src='/media/images/default_album.png' width='32px' height='32px'/>
     <p><% text %></p>
-    <h2><% song_name %> <% song_album %> <% song_artist %></h2>
+    <h2><span><% song_name %> <% song_album %> <% song_artist %></span></h2>
     <div class='date date-comment'><% formatted_start_date %></div>
 </div>
