--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2161,7 +2161,7 @@ ul#notifications {
 
 .notification-container {
     position:relative;
-    height:67px;
+    min-height:67px;
     border-top:1px solid #e3e3e3;
     box-shadow: 0px 1px 1px white inset;
     padding-left: 102px;
@@ -2169,17 +2169,13 @@ ul#notifications {
 }
 
 .notification-container .text-notification {
-    position:absolute;
-    top:25px;
+    margin-top:25px;
     width:500px;
-    height:39px;
-    overflow:hidden;
     font-size:17px;
     color:#434343;
     font-weight: normal;
-    color:#434343;
     font-size: 17px;
-    font-weight: normal;
+    padding-bottom:23px;
 }
 
 .notifications-heart
@@ -2221,27 +2217,29 @@ ul#notifications {
     background-repeat: no-repeat;
     position:absolute;
     left:20px;
-    top:15px;
+    top:21%;
     background-image:url('../app/images/notifications/notifications-balloon-icon.png');
 }
 
 .notification-container .close-icon {
+    height:20px;
     display:block;
     position:absolute;
-    top:25px;
+    bottom:33%;
     right:20px;
     height:20px;
     width:20px;
     background-image:url('../app/images/notifications/notifications-close.png');
 }
 
-.notification-container .date {
-    float:right;
+.notification-container .notifications-date{
+    height:20px;
+    position:absolute;
+    bottom:33%;
+    right:46px;
     color:#b3b3b3;
     font-size: 17px;
     font-weight: normal;
-    margin-right:55px;
-    margin-top:25px;
 }
 
 .notification-odd {
