--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -2,6 +2,6 @@
 <div class='notification-container'>
 	<div class='<% type %>'></div>
 	<a class="close-icon" data-dismiss="alert" href="#"></a>
-	<div class='date'><% formatted_date %></div>
+	<div class='notifications-date'><% formatted_date %></div>
 	<div class='<%#read%>read<%/read%> text-notification'><%#html%><%{html %><%/html%><%^html%><% text %><%/html%></div>
 </div>
