--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class='row'>
+<div class='row-fluid'>
     <div class='span12'>
         <ul id='results' class='radio-with-stats-cells'>
         <img class='loading-mask' src='/media/images/loading.gif'/>
