--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -7,6 +7,23 @@
         <div class='cell-pagination' id='pagination'></div>
     </div>
 </div>
+
+<div class="modal hide fade" id="modal-delete-radio">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Delete radio" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Do you really want to delete this radio? This action cannot be undone." %}</p>
+        <p>{% trans 'Enter "yes" to confirm:' %}</p>
+        <input placeholder='Confirmation'/>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+    </div>
+</div>
+
 {% if user_profile.permissions.create_radio %}
 <div class='row'>
     <div class='span12'>
