hide submenu for phone resolutions

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -376,7 +376,7 @@
 		</div>
 	</div>
 	</div>
-	<div id='submenu-container'>{% include 'yabase/app/common/subMenu.html' %}</div>
+	<div id='submenu-container' class='hidden-phone' >{% include 'yabase/app/common/subMenu.html' %}</div>
 
 <div class="modal hide fade" id="modal-share">
     <div class="modal-header">
