--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3457,11 +3457,6 @@ a.yabutton-small {
     display:none;
  }
 
- .radio-with-stats .radio-toolbar .responsive-edit-radio,
- .radio-with-stats .radio-toolbar .responsive-edit-playlist {
-    display:none;
- }
-
 
 
 
@@ -3504,10 +3499,6 @@ a.yabutton-small {
 
 	#results {
 		width:100%;
-	}
-
-	#pagination {
-		margin-left:18.5%;
 	}
 
 /*-- MENU --*/
@@ -3728,7 +3719,7 @@ a.yabutton-small {
         clear:right;
         width:20%;
         height:95px;
-        margin-top:10px;
+        margin-top:0px;
         margin-right:10px;
     }
 
@@ -3763,8 +3754,13 @@ a.yabutton-small {
     }
 
     .radio-with-stats .radio-toolbar .edit-playlist {
+        clear:right;
         display:block;
         margin-left:2px;
+        margin-bottom:10px;
+    }
+
+    .radio-with-stats .radio-toolbar .delete-radio {
         margin-bottom:10px;
     }
 
@@ -4018,7 +4014,7 @@ a.yabutton-small {
         width:20%;
         height:95px;
         margin-top:10px;
-        margin-right:30px;
+        margin-right:2%;
     }
 
     .stats em {
@@ -4028,8 +4024,10 @@ a.yabutton-small {
 
     .radio-with-stats .radio-toolbar {
         float:right;
-        margin:10px;
-        margin-right:30px;
+        margin:3%;
+        margin-right:2%;
+        margin-left: 0px;
+        margin-top:23px;
     }
 
     .radio-with-stats .radio-toolbar button {
@@ -4040,12 +4038,13 @@ a.yabutton-small {
 
     .radio-with-stats .radio-toolbar .edit-radio {
         display:block;
-        margin-right:10px;
+        margin-right:5px;
     }
 
     .radio-with-stats .radio-toolbar .edit-playlist {
         display:block;
         margin-left:2px;
+        margin-right:5px;
         margin-bottom:10px;
     }
 
@@ -4057,6 +4056,11 @@ a.yabutton-small {
         margin-right:30px;
         height: 50% !important;
         width: 92% !important;
+    }
+
+    .radio-with-stats .radio-cell-parent {
+        margin-right:0px;
+        margin-left:3%;
     }
 
 /*-- FOOTER --*/
