mobile menu is commented right now

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -297,7 +297,7 @@
         <div class="container">
 			<div id="brand-logo">
           <div id='mobile-menu' class='visible-phone'>
-            <div id= 'mobile-menu-btn'>MENU</div>
+            {# <div id= 'mobile-menu-btn'>MENU</div> #}
           </div>
 				<a href="{% url webapp %}" id='btn-webapp'>
 					<img src="/media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
@@ -446,7 +446,6 @@
 
 <div id='webapp-container'>
             <div id='mobile-menu-content' class='hidden-display'>
-              hello, world
             </div>
 
   {% block content%}{%endblock%}</div>
