--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
    <div id='webapp-track-container'>
 		<div id='webapp-track-picture'>
-       		<img src="<% cover %>" width="210px" height="210px"/>
+       		<img src="<% large_cover %>" width="210px" height="210px"/>
    		</div>
    		<div id='webapp-track-title'>
             <h2><% title %></h2>
