responsive menu with logo to tablet version, interaction and mobile version remaining

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3458,6 +3458,14 @@ a.yabutton-small {
     display:none;
  }
 
+ .responsive-settings-btn {
+    display:none;
+ }
+
+ .responsive-volume-btn {
+    display:none;
+ }
+
 
 
 
@@ -3483,6 +3491,10 @@ a.yabutton-small {
     #scroll-top-container {
         display:none;
         opacity:0;
+    }
+
+    #pagination {
+        width:100%;
     }
 
 /*-- HEADER --*/
@@ -3940,11 +3952,50 @@ a.yabutton-small {
         display:none;
         opacity:0;
     }
+    
+    #pagination {
+        width:100%;
+    }
 
 /*-- HEADER --*/
-    #header {
-        position:fixed;
-        z-index: 10;
+
+    #player,
+    .header-separation,
+    #user-menu {
+        display:none;
+    }
+
+
+    .navbar-inner .container {
+        text-align: center;
+        height:50px;
+        margin-top:25px;
+    }
+
+    #brand-logo {
+        display:inline;
+        float:none;
+        margin-top:20px;
+    }
+
+    .navbar-fixed-top {
+        top: 0;
+    }
+
+    .navbar-fixed-top, .navbar-fixed-bottom {
+        position: fixed;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+        margin-bottom: 0;
+    }
+
+    #header .navbar-inner {
+        background-image: url(/media/app/images/header_bg.png);
+        background-repeat: repeat-x;
+        height: 76px;
+        padding-top:1px;
+        padding-bottom:0px;
     }
 
 /*-- SIGNUP --*/
@@ -4282,6 +4333,11 @@ a.yabutton-small {
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
+/*-- COMMONS --*/
+    #pagination {
+        width:100%;
+    }
+
 /*-- HEADER --*/
     
     #header {
@@ -4289,7 +4345,91 @@ a.yabutton-small {
         z-index: 10;
     }
 
-    /*-- SIGNUP --*/
+    .navbar-inner .container {
+        width: 724px;       
+    }
+
+    #min-level,
+    #slider-container,
+    #max-level {
+        display:none;
+    }
+
+    #sound-level {
+        width:75px;
+        padding-left:10px;
+    }
+
+    .responsive-volume-btn {
+        display:block;
+        float:left;
+        margin-top:12px;
+        margin-left:10px;
+        height:27px;
+        width:27px;
+        background-image: linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
+        background-image: -o-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
+        background-image: -moz-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
+        background-image: -webkit-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
+        background-image: -ms-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
+
+        background-image: -webkit-gradient(
+            linear,
+            left bottom,
+            left top,
+            color-stop(0, rgb(57,59,60)),
+            color-stop(1, rgb(138,143,145))
+        );
+        border-radius:50%;
+        box-shadow: 0px 1px 2px #202223;
+    }
+
+    .responsive-volume-btn img {
+        padding-left:7px;
+        padding-top:7px;
+    }
+
+    #sub-header {
+        display:none;
+    }
+
+    .nav-collapse {
+        clear:none;
+        overflow:visible;
+    }
+
+    .header-separation {
+        display:none;
+    }
+
+    #user-menu {
+        width:155px;
+    }
+
+    .switch-container {
+        margin-left:12px;
+    }
+
+    #radio-picto,
+    #play-btn,
+    #favorite-radio,
+    #favorite-radio:hover {
+        margin-left:10px;
+    }
+
+    #profile-picture {
+        padding-left:0px;
+    }
+
+    #header .navbar-inner {
+        background-image: url(/media/app/images/header_bg.png);
+        background-repeat: repeat-x;
+        height: 76px;
+        padding-top:1px;
+        padding-bottom:0px;
+    }
+
+/*-- SIGNUP --*/
     .signup-container {
         width:100%;
         height:100%;
@@ -4455,6 +4595,9 @@ a.yabutton-small {
     }
 
 }
+
+
+
 
 /* Large desktop */
 @media (min-width: 1200px) {
