--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -32,6 +32,12 @@
     <div id="max-level">
         <img src="/media/app/images/higher-volume.png" width="11" height="11" alt="Higher Volume">
     </div>
+    <div class="responsive-volume-btn">
+            <img src="/media/app/images/responsive-higher-volume.png">
+    </div>
+    <div class="responsive-volume-btn">
+        <img src="/media/app/images/responsive-lower-volume.png">
+    </div>
 </div>
 
 
